hard-gists/946582/run.log
=== Docker Run Log for 946582 ===
Started at: Mi 29. Okt 18:26:13 CET 2025

[2025-10-29 18:26:13] START: Running container for 946582
[2025-10-29 18:26:14] SUCCESS: Container 19296ee041d020aced1f0dbedab3e8f33843e919176dfef2962b8fd395c7a488 started for 946582
=== Container logs for 946582 ===
  File "/snippet.py", line 46
    print bind(Identity.wrap(1), lambda x: Identity.wrap(x))
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 946582 ===
[2025-10-29 18:26:16] INFO: Container 19296ee041d020aced1f0dbedab3e8f33843e919176dfef2962b8fd395c7a488 has stopped
